# gendiff

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: linter_check.yml  linter_test_check.yml
gendiff/: __init__.py  constants.py  gendiff_engine.py  parser_file.py
gendiff/formatters/: __init__.py  formatter_json.py  formatter_plain.py  formatter_stylish.py
gendiff/scripts/: gendiff.py
tests/: test_formatters.py  test_generate_diff.py  test_help_function.py
tests/fixtures/: dict_for_testing.py  nested_structure_before.yaml  result_for_testing.py  result_gendiff_json.py
tests/fixtures/files/: nested_structure_after.json  nested_structure_after.yaml
tests/fixtures/results/: dictionary_for_test.txt  json_structure.txt  nested_structure.txt
tests/hexlet/: test_hexlet.py
